# chartdownloader

./: CMakeLists.txt  README.md  chartdownloader.icns  chartdownloader.pro  qml.qrc  qtquickcontrols2.conf
cmake_modules/: FindPoppler.cmake
debian/: copyright  rules
qml/: Download.qml  DownloadForm.ui.qml  PhotoViewer.qml  main.qml
src/: airport.cpp  airport.h  auscontenthandler.cpp  auscontenthandler.h  ausservice.cpp  ausservice.h  chartinfo.cpp  chartinfo.h  downloadmanager.cpp  downloadmanager.h  faaservice.cpp  faaservice.h  filedownloader.cpp  filedownloader.h  iconprovider.cpp  iconprovider.h  main.cpp  mycontenthandler.cpp  mycontenthandler.h  serviceprovider.cpp  serviceprovider.h  utils.cpp  utils.h
